--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>time-management-ui</name>
+	<name>CPCL-TimeMS</name>
 	<comment>Project time-management-ui created by Buildship.</comment>
 	<projects>
 	</projects>
